--- a/Presentation/ToDo.txt
+++ b/Presentation/ToDo.txt
@@ -1,14 +1,10 @@
 
+kolla finally på db
+
+varningar
 
 
-
-1: Köp skjorta och inventera västen.
-
-2: Samla in data
-
-3: Gå över och snygga till
-
-5: Gör film
+ALLT KLART
 
 
 
